deployment/deployment-wo-servicemesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-service
  namespace: webtest-classic
  labels:
    app: webtest
    service: webtest-service
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: webtest
  type: NodePort
