deployment/deployment-wo-servicemesh/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webtest-ingress
  namespace: webtest-classic
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "classic"
    networking.gke.io/managed-certificates: "classic-gke-cert"
spec:
  backend:
    serviceName: webtest-service
    servicePort: 80
